--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-A5 CL (Core Layer) - Application Framework Library Built on A5(<a href="http://a5.testpilot111.com">a5.testpilot111.com</a>)
+A5 CL (Core Layer) - Application Framework Library Built on A5(http://a5.testpilot111.com)
 
 Licensed under GPL-3.0
 
